tests/fail/wrong-attr.stderr
error: Invalid argument: `wrong attr`.
 --> $DIR/wrong-attr.rs:8:21
  |
8 |         #[enumerate(wrong attr)]
  |                     ^^^^^^^^^^
  |
  = note: Expected `skip`, valid identifier, or `start = <ident>`.
